<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.example.android.bluetoothlegatt.LoggerFrontEnd">

    <EditText
        android:id="@+id/rpmEditText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="16dp"
        android:layout_marginTop="16dp"
        android:ems="10"
        android:inputType="number"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/rpmTextView"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginEnd="16dp"
        android:text="@string/rpmTextView"
        app:layout_constraintBaseline_toBaselineOf="@+id/rpmEditText"
        app:layout_constraintEnd_toStartOf="@+id/rpmEditText" />

    <TextView
        android:id="@+id/vssTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="16dp"
        android:layout_marginTop="32dp"
        android:text="@string/vssTextView"
        app:layout_constraintEnd_toStartOf="@+id/vssEditText"
        app:layout_constraintTop_toBottomOf="@+id/rpmTextView" />

    <EditText
        android:id="@+id/vssEditText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="16dp"
        android:layout_marginRight="16dp"
        android:ems="10"
        android:inputType="number"
        app:layout_constraintBaseline_toBaselineOf="@+id/vssTextView"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintRight_toRightOf="parent" />

    <EditText
        android:id="@+id/mapEditText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="16dp"
        android:ems="10"
        android:inputType="number"
        app:layout_constraintBaseline_toBaselineOf="@+id/mapTextView"
        app:layout_constraintEnd_toEndOf="parent" />

    <TextView
        android:id="@+id/mapTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="16dp"
        android:layout_marginTop="32dp"
        android:text="@string/mapTextView"
        app:layout_constraintEnd_toStartOf="@+id/mapEditText"
        app:layout_constraintTop_toBottomOf="@+id/vssTextView" />

    <TextView
        android:id="@+id/lambdaTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="16dp"
        android:layout_marginTop="32dp"
        android:text="@string/mapUnfiltTextView"
        app:layout_constraintEnd_toStartOf="@+id/mapUFEditText"
        app:layout_constraintTop_toBottomOf="@+id/mapTextView" />

    <EditText
        android:id="@+id/mapUFEditText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="16dp"
        android:ems="10"
        android:inputType="number"
        app:layout_constraintBaseline_toBaselineOf="@+id/lambdaTextView"
        app:layout_constraintEnd_toEndOf="parent" />

    <TextView
        android:id="@+id/sysClockTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="16dp"
        android:layout_marginTop="32dp"
        android:text="@string/tickTextView"
        app:layout_constraintEnd_toStartOf="@+id/ticksEditText"
        app:layout_constraintTop_toBottomOf="@+id/lambdaTextView" />

    <EditText
        android:id="@+id/ticksEditText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="16dp"
        android:ems="10"
        android:inputType="number"
        app:layout_constraintBaseline_toBaselineOf="@+id/sysClockTextView"
        app:layout_constraintEnd_toEndOf="parent" />

    <ToggleButton
        android:id="@+id/logToggleButton"
        android:layout_width="140dp"
        android:layout_height="45dp"
        android:layout_marginBottom="8dp"
        android:layout_marginEnd="8dp"
        android:layout_marginStart="8dp"
        android:checked="false"
        android:text="@string/logToFile"
        android:textOff="Start Log"
        android:textOn="Stop Log"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <EditText
        android:id="@+id/lambdaVoltsEditText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginRight="16dp"
        android:ems="10"
        android:inputType="number"
        app:layout_constraintBaseline_toBaselineOf="@+id/textView"
        app:layout_constraintRight_toRightOf="parent" />

    <TextView
        android:id="@+id/textView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="16dp"
        android:layout_marginTop="32dp"
        android:text="@string/lambdaTextView"
        app:layout_constraintEnd_toStartOf="@+id/lambdaVoltsEditText"
        app:layout_constraintTop_toBottomOf="@+id/sysClockTextView" />
</android.support.constraint.ConstraintLayout>
